axum-macros/tests/fail/double_via_attr.stderr
error: `via` specified more than once
 --> tests/fail/double_via_attr.rs:5:49
  |
5 | struct Extractor(#[from_request(via(Extension), via(Extension))] State);
  |                                                 ^^^

warning: unused import: `axum::extract::Extension`
 --> tests/fail/double_via_attr.rs:2:5
  |
2 | use axum::extract::Extension;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
